# petstore-python-test

./: .gitignore  openapi.yaml
.speakeasy/: workflow.yaml
test-projects/csharp/: test.sh
test-projects/java/: test.sh
test-projects/php/: composer.json  test.sh
test-projects/python/: test.sh
test-projects/python/pip/: test.sh
test-projects/python/poetry/: test.sh
test-projects/python/uv/: pyproject.toml  test.sh
test-projects/ruby/: Gemfile  test.sh
test-projects/typescript/: test.sh
test-projects/typescript/bun/: test.sh
test-projects/typescript/npm/: test.sh
test-projects/typescript/pnpm/: package.json  test.sh
test-projects/typescript/yarn/: test.sh
